force-app/main/default/objects/Case/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <description>Account number of the product (US-1495).
            SGPRT-536 - Change help text</description>
    <inlineHelpText>The account number used to identify a specific account/product for the client</inlineHelpText>
    <label>Account Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>