force-app/main/default/objects/Case/fields/Acknowledged_Within__c.field-meta.xml
<CustomField>
    <fullName>Acknowledged_Within__c</fullName>
    <label>Acknowledged Within</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Market__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>2 hrs</fullName>
            </value>
            <value>
                <fullName>2-24 hrs</fullName>
            </value>
            <value>
                <fullName>24 hrs+</fullName>
            </value>
            <value>
                <fullName>24 hrs</fullName>
            </value>
            <value>
                <fullName>24 hrs to 3 days</fullName>
            </value>
            <value>
                <fullName>4 days+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>