force-app/main/default/objects/Case/fields/Actual_Hours_To_Complete__c.field-meta.xml
<CustomField>
    <fullName>Actual_Hours_To_Complete__c</fullName>
    <description>CRM-Enhanced Cases for Change Request Functionality (C Reinecke 2010/08)</description>
    <label>Actual Hours To Complete</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>