force-app/main/default/objects/Case/fields/Actual_Implementation_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Implementation_Date__c</fullName>
    <description>The date on which the change request was implemented in production.

            CRM-Enhanced Cases for Change Request Functionality (C Reinecke 2010/08)</description>
    <label>Actual Implementation Date</label>
    <type>Date</type>
</CustomField>