force-app/main/default/objects/Case/fields/Agent_Breach__c.field-meta.xml
<CustomField>
    <fullName>Agent_Breach__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Records which User was the Owner of the Case record when the Agent Resolution milestone was violated.</description>
    <label>Agent Breach</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases3</relationshipName>
    <type>Lookup</type>
</CustomField>