force-app/main/default/objects/Case/fields/Agent_Resolution_Violation__c.field-meta.xml
<CustomField>
    <fullName>Agent_Resolution_Violation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is TRUE when the Agent Resolution Milestone was violated.</description>
    <label>Agent Resolution Breach</label>
    <type>Checkbox</type>
</CustomField>