force-app/main/default/objects/Case/fields/Applicable_To__c.field-meta.xml
<CustomField>
    <fullName>Applicable_To__c</fullName>
    <description>Select the nature of the case, which enforces capture of relevant fields</description>
    <inlineHelpText>Select the nature of the case, which enforces capture of relevant fields</inlineHelpText>
    <label>Applicable To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Collateral</fullName>
            </value>
            <value>
                <fullName>Material Term</fullName>
            </value>
            <value>
                <fullName>Valuation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>