force-app/main/default/objects/Case/fields/Approaching_SLA_at__c.field-meta.xml
<CustomField>
    <fullName>Approaching_SLA_at__c</fullName>
    <description>Date and time when SLA would be approaching and so triggering notification (US-1536).</description>
    <inlineHelpText>Date and time when SLA would be approaching and so triggering notification.</inlineHelpText>
    <label>Approaching SLA at</label>
    <type>DateTime</type>
</CustomField>