force-app/main/default/objects/Case/fields/Asset_Class__c.field-meta.xml
<CustomField>
    <fullName>Asset_Class__c</fullName>
    <label>Asset Class</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FMA_Discrepancy__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bonds</fullName>
            </value>
            <value>
                <fullName>Cash Equities (Institutional)</fullName>
            </value>
            <value>
                <fullName>Cash Equities (Retail)</fullName>
            </value>
            <value>
                <fullName>Commodities (FMA Derivatives)</fullName>
            </value>
            <value>
                <fullName>Commodities (Non FMA Physically Settled)</fullName>
            </value>
            <value>
                <fullName>Credit Derivatives</fullName>
            </value>
            <value>
                <fullName>Equity Derivatives (Retail)</fullName>
            </value>
            <value>
                <fullName>Equity Derivatives (Wholesale)</fullName>
            </value>
            <value>
                <fullName>Foreign Exchange (FMA)</fullName>
            </value>
            <value>
                <fullName>Foreign Exchange (Non FMA)</fullName>
            </value>
            <value>
                <fullName>Interest Rate Derivatives</fullName>
            </value>
            <value>
                <fullName>Money Markets</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>