force-app/main/default/objects/Case/fields/Asset_Manager__c.field-meta.xml
<CustomField>
    <fullName>Asset_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-4080 - This field captures the Asset Manager involved in this service request (DD-MM-YYYY)</description>
    <inlineHelpText>Is there an Asset Manager involved in this request? If so, add them here.</inlineHelpText>
    <label>Asset Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Asset Manager)</relationshipLabel>
    <relationshipName>Cases3</relationshipName>
    <type>Lookup</type>
</CustomField>