force-app/main/default/objects/Case/fields/Back_Office__c.field-meta.xml
<CustomField>
    <fullName>Back_Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-4080 - This field captures the Back Office party involved in the request (DD-MM-YYYY)</description>
    <inlineHelpText>Is there a Back Office party involved in the request? If so, add it here.</inlineHelpText>
    <label>Back Office</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Back Office)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>