force-app/main/default/objects/Case/fields/Benefit_Of_Change__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Of_Change__c</fullName>
    <description>CRM-Enhanced Cases for Change Request Functionality (C Reinecke 2010/08)</description>
    <label>Change Benefits</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Process Improvement</fullName>
            </value>
            <value>
                <fullName>Client Experience</fullName>
            </value>
            <value>
                <fullName>Data Quality Improvement</fullName>
            </value>
            <value>
                <fullName>Revenue Driver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>