force-app/main/default/objects/Case/fields/BPID__c.field-meta.xml
<CustomField>
    <fullName>BPID__c</fullName>
    <formula>IF(AccountId = NULL, &quot;&quot;, Account.BPID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BPID</label>
    <type>Text</type>
</CustomField>