force-app/main/default/objects/Case/fields/Breach_Warning__c.field-meta.xml
<CustomField>
    <fullName>Breach_Warning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SGPRT-2397: This field is used to flag cases that are possibly going to breach</description>
    <inlineHelpText>This field indicates whether the case is approaching violation.</inlineHelpText>
    <label>Breach Warning</label>
    <type>Checkbox</type>
</CustomField>