force-app/main/default/objects/Case/fields/Breaching_SLA_at__c.field-meta.xml
<CustomField>
    <fullName>Breaching_SLA_at__c</fullName>
    <description>Date and time when SLA would breach and so triggering notification (US-1536).</description>
    <inlineHelpText>Date and time when SLA would breach and so triggering notification.</inlineHelpText>
    <label>Breaching SLA at</label>
    <type>DateTime</type>
</CustomField>