force-app/main/default/objects/Case/fields/Capability_of_Response__c.field-meta.xml
<CustomField>
    <fullName>Capability_of_Response__c</fullName>
    <label>Capability of Response</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>In the Flow</fullName>
            </value>
            <value>
                <fullName>Hand-Off</fullName>
            </value>
            <value>
                <fullName>Kickback</fullName>
            </value>
            <value>
                <fullName>Not Done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>