force-app/main/default/objects/Case/fields/Case_Category__c.field-meta.xml
<CustomField>
    <fullName>Case_Category__c</fullName>
    <label>Case Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Activities</fullName>
            </value>
            <value>
                <fullName>Campaign Management</fullName>
            </value>
            <value>
                <fullName>CFX</fullName>
            </value>
            <value>
                <fullName>Clients</fullName>
            </value>
            <value>
                <fullName>Client Team</fullName>
            </value>
            <value>
                <fullName>Contacts</fullName>
            </value>
            <value>
                <fullName>Content Management</fullName>
            </value>
            <value>
                <fullName>Data Management</fullName>
            </value>
            <value>
                <fullName>General Navigation</fullName>
            </value>
            <value>
                <fullName>IT Infrastructure</fullName>
            </value>
            <value>
                <fullName>Login Issues</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Opportunities</fullName>
            </value>
            <value>
                <fullName>Outlook Sync</fullName>
            </value>
            <value>
                <fullName>Password Reset</fullName>
            </value>
            <value>
                <fullName>Production Issue</fullName>
            </value>
            <value>
                <fullName>Reports &amp; Dashboards</fullName>
            </value>
            <value>
                <fullName>Sales Team</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>User - New</fullName>
            </value>
            <value>
                <fullName>User - Off Board</fullName>
            </value>
            <value>
                <fullName>User - Transfer</fullName>
            </value>
            <value>
                <fullName>User - Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>