force-app/main/default/objects/Case/fields/Case_Escalation_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Escalation_Date__c</fullName>
    <label>Case Escalation Date</label>
    <type>DateTime</type>
</CustomField>