force-app/main/default/objects/Case/fields/Case_Origination_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Origination_Date__c</fullName>
    <label>Case Origination Date</label>
    <type>Date</type>
</CustomField>