force-app/main/default/objects/Case/fields/Case_Owner_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Business_Unit__c</fullName>
    <description>User Business Unit of the Case Owner</description>
    <inlineHelpText>User Business Unit of the Case Owner</inlineHelpText>
    <label>Case Owner Business Unit</label>
    <length>100</length>
    <type>Text</type>
</CustomField>