force-app/main/default/objects/Case/fields/Case_Owner_CIB_Global_Area__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_CIB_Global_Area__c</fullName>
    <description>CIB Global Area of the Case Owner</description>
    <inlineHelpText>CIB Global Area of the Case Owner</inlineHelpText>
    <label>Case Owner CIB Global Area</label>
    <length>25</length>
    <type>Text</type>
</CustomField>