force-app/main/default/objects/Case/fields/Case_Owner_City__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_City__c</fullName>
    <description>User City of the Case Owner</description>
    <inlineHelpText>User City of the Case Owner</inlineHelpText>
    <label>Case Owner City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>