force-app/main/default/objects/Case/fields/Case_Owner_Country__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Country__c</fullName>
    <description>User Country of the Case Owner</description>
    <inlineHelpText>User Country of the Case Owner</inlineHelpText>
    <label>Case Owner Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>