force-app/main/default/objects/Case/fields/Case_Owner_Division__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Division__c</fullName>
    <description>User Division of the Case Owner</description>
    <inlineHelpText>User Division of the Case Owner</inlineHelpText>
    <label>Case Owner Division</label>
    <length>100</length>
    <type>Text</type>
</CustomField>