force-app/main/default/objects/Case/fields/Case_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Role__c</fullName>
    <formula>Owner:User.UserRole.DeveloperName</formula>
    <label>Case Owner Role</label>
    <type>Text</type>
</CustomField>