force-app/main/default/objects/Case/fields/Case_Owner_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_State_Province__c</fullName>
    <description>User State/Province of the Case Owner</description>
    <inlineHelpText>User State/Province of the Case Owner</inlineHelpText>
    <label>Case Owner State/Province</label>
    <length>100</length>
    <type>Text</type>
</CustomField>