force-app/main/default/objects/Case/fields/Case_Owner_Team__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Team__c</fullName>
    <description>User Team of the Case Owner</description>
    <inlineHelpText>User Team of the Case Owner</inlineHelpText>
    <label>Case Owner Team</label>
    <length>100</length>
    <type>Text</type>
</CustomField>