force-app/main/default/objects/Case/fields/Case_Related_to_CDC__c.field-meta.xml
<CustomField>
    <fullName>Case_Related_to_CDC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To make the cases related to CDC visible to users EN-0676</description>
    <label>Case Related to CDC</label>
    <type>Checkbox</type>
</CustomField>