force-app/main/default/objects/Case/fields/Case_Stage__c.field-meta.xml
<CustomField>
    <fullName>Case_Stage__c</fullName>
    <inlineHelpText>This indicates the working stages of the case</inlineHelpText>
    <label>Case Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Approved</fullName>
                <default>true</default>
                <label>Not Approved</label>
            </value>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>