force-app/main/default/objects/Case/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>EN-0864 : Field is currently used to assign to &quot;CIB Customer Query&quot; Case Record Type if value is not blank</description>
    <inlineHelpText>What type of Product/Service the Query relates to</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ARC-IB</fullName>
            </value>
            <value>
                <fullName>ATG</fullName>
            </value>
            <value>
                <fullName>Autosafe</fullName>
            </value>
            <value>
                <fullName>Borderless Banking</fullName>
            </value>
            <value>
                <fullName>Bulk Payments</fullName>
            </value>
            <value>
                <fullName>Business Connect</fullName>
            </value>
            <value>
                <fullName>Business Online</fullName>
            </value>
            <value>
                <fullName>Cash Management</fullName>
            </value>
            <value>
                <fullName>Cheque &amp; Card</fullName>
            </value>
            <value>
                <fullName>CIT-Value transfer services</fullName>
            </value>
            <value>
                <fullName>CollectPlus</fullName>
            </value>
            <value>
                <fullName>EBB - Electronic Bill Board</fullName>
            </value>
            <value>
                <fullName>EBSRCM</fullName>
            </value>
            <value>
                <fullName>e-Centric Switch (ECS)</fullName>
            </value>
            <value>
                <fullName>ETRANZACT</fullName>
            </value>
            <value>
                <fullName>FastPay</fullName>
            </value>
            <value>
                <fullName>FAX</fullName>
            </value>
            <value>
                <fullName>Host to Host</fullName>
            </value>
            <value>
                <fullName>International Cash Management</fullName>
            </value>
            <value>
                <fullName>Investor Services Online</fullName>
            </value>
            <value>
                <fullName>IS Online</fullName>
            </value>
            <value>
                <fullName>iTrade</fullName>
            </value>
            <value>
                <fullName>Nampay</fullName>
            </value>
            <value>
                <fullName>NetPlus</fullName>
            </value>
            <value>
                <fullName>new Business Online</fullName>
            </value>
            <value>
                <fullName>PAYDIRECT</fullName>
            </value>
            <value>
                <fullName>Paynet</fullName>
            </value>
            <value>
                <fullName>Quantum Trade</fullName>
            </value>
            <value>
                <fullName>QuickPay</fullName>
            </value>
            <value>
                <fullName>SFI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>