force-app/main/default/objects/Case/fields/Category_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Category_Reporting__c</fullName>
    <description>SGPRT-373 - Reporting field showing the Category value</description>
    <inlineHelpText>This field represents the Category value of the Service Type record used to classify the case.</inlineHelpText>
    <label>Category</label>
    <length>50</length>
    <type>Text</type>
</CustomField>