force-app/main/default/objects/Case/fields/CCC_Angola_Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>CCC_Angola_Branch_Name__c</fullName>
    <label>Branch Name</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Origin</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AAA Namibe</fullName>
                <isActive>false</isActive>
                <label>AAA Namibe</label>
            </value>
            <value>
                <fullName>Belas</fullName>
            </value>
            <value>
                <fullName>Cabinda</fullName>
            </value>
            <value>
                <fullName>Dolce Vita</fullName>
            </value>
            <value>
                <fullName>Gika</fullName>
            </value>
            <value>
                <fullName>Hotel Presidente</fullName>
            </value>
            <value>
                <fullName>Lar do Patriota</fullName>
            </value>
            <value>
                <fullName>Maianga</fullName>
            </value>
            <value>
                <fullName>Maxi-Porto Amboim</fullName>
            </value>
            <value>
                <fullName>Namibe</fullName>
            </value>
            <value>
                <fullName>Rei Katyavala</fullName>
            </value>
            <value>
                <fullName>Shoprite Belas</fullName>
            </value>
            <value>
                <fullName>Shoprite Huambo</fullName>
            </value>
            <value>
                <fullName>Shoprite Lobito</fullName>
            </value>
            <value>
                <fullName>Shoprite Lubango</fullName>
            </value>
            <value>
                <fullName>Shoprite Viana</fullName>
            </value>
            <value>
                <fullName>Sogepower</fullName>
            </value>
            <value>
                <fullName>Torre Ambiente</fullName>
            </value>
            <value>
                <fullName>Torre Elyse</fullName>
                <label>Torre Elysée</label>
            </value>
            <value>
                <fullName>Xyami Kilamba</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>