force-app/main/default/objects/Case/fields/CCC_Angola_Category__c.field-meta.xml
<CustomField>
    <fullName>CCC_Angola_Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CCC_Angola_Team__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ARC-IB</fullName>
            </value>
            <value>
                <fullName>ATG</fullName>
            </value>
            <value>
                <fullName>ATM Machines</fullName>
            </value>
            <value>
                <fullName>Autosafe</fullName>
            </value>
            <value>
                <fullName>B</fullName>
                <isActive>false</isActive>
                <label>B</label>
            </value>
            <value>
                <fullName>Bankinta Saving Account</fullName>
                <isActive>false</isActive>
                <label>Bankinta Saving Account</label>
            </value>
            <value>
                <fullName>Bulk Payments</fullName>
            </value>
            <value>
                <fullName>Business Connect</fullName>
            </value>
            <value>
                <fullName>Business Online</fullName>
            </value>
            <value>
                <fullName>Business Online (BOL)</fullName>
            </value>
            <value>
                <fullName>Business Online Mobile Application</fullName>
            </value>
            <value>
                <fullName>Call Account</fullName>
            </value>
            <value>
                <fullName>Car Loan</fullName>
            </value>
            <value>
                <fullName>Cartões de crédito</fullName>
            </value>
            <value>
                <fullName>Cartões de Débito e Cartões pré-pagos</fullName>
            </value>
            <value>
                <fullName>Cash Management</fullName>
            </value>
            <value>
                <fullName>Cash Management ( Need to change this to account Management</fullName>
                <isActive>false</isActive>
                <label>Cash Management ( Need to change this to account Management</label>
            </value>
            <value>
                <fullName>Cheque and Card</fullName>
            </value>
            <value>
                <fullName>Cheques</fullName>
            </value>
            <value>
                <fullName>CIT - Value Transfer Services</fullName>
            </value>
            <value>
                <fullName>Cobranças, Prestação de Serviços e Operações com o Estrangeiro</fullName>
            </value>
            <value>
                <fullName>Collection</fullName>
            </value>
            <value>
                <fullName>CollectPlus</fullName>
            </value>
            <value>
                <fullName>Consumer Loan</fullName>
            </value>
            <value>
                <fullName>Consumption Credit, automobile credit and other types of credit</fullName>
            </value>
            <value>
                <fullName>Credit Cards</fullName>
            </value>
            <value>
                <fullName>Crédito à habitação</fullName>
            </value>
            <value>
                <fullName>Current Account</fullName>
            </value>
            <value>
                <fullName>Debit Cards</fullName>
            </value>
            <value>
                <fullName>Descobertos bancários</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>