force-app/main/default/objects/Case/fields/CCC_Angola_Team__c.field-meta.xml
<CustomField>
    <fullName>CCC_Angola_Team__c</fullName>
    <description>This picklist value, drives the category and sub-category selection for Angola Cases</description>
    <inlineHelpText>This picklist value, drives the category and sub-category selection for Angola Cases</inlineHelpText>
    <label>Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CIB CCC Angola</fullName>
            </value>
            <value>
                <fullName>PBB CCC Angola</fullName>
            </value>
            <value>
                <fullName>ED CCC Angola</fullName>
            </value>
            <value>
                <fullName>ST CCC Angola</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>