force-app/main/default/objects/Case/fields/CCC_Final_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>CCC_Final_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CCC Final Email Sent</label>
    <type>Checkbox</type>
</CustomField>