force-app/main/default/objects/Case/fields/Change_Justification__c.field-meta.xml
<CustomField>
    <fullName>Change_Justification__c</fullName>
    <description>CRM-Enhanced Cases for Change Request Functionality (C Reinecke 2010/08)</description>
    <label>Change Justification</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>